fix nested grid overflow

--- a/style/custom.scss
+++ b/style/custom.scss
@@ -11,6 +11,7 @@ p {
   max-width: 700px;
   font: lato !important;
   font-weight: 100;
+  min-width: 10px !important;
 }
 
 img#my-pic {
@@ -34,12 +35,12 @@ div[class*="proj-"] {
   font-size: 70%;
 }
 
-.g-col-12.proj-info {
-  line-height: 50px;
+.grid {
+  row-gap: 0px !important;
 }
 
-.g-col-sm-6.proj-info {
-  line-height: 18px;
+.proj-description p {
+  line-height: 20px;
 }
 
 /*
